package pt.ipp.isep.dei.service;


public class CargoDistributionService {

    public CargoDistributionService() { }

    public void calculateStatistics() {
        throw new UnsupportedOperationException("Not supported yet.");
    }
}
