package pt.ipp.isep.dei.service;

public class SimulationService {

    public SimulationService() {
        // Constructor
    }

    public void configureSimulation(/* TODO: Add parameters */) {
        throw new UnsupportedOperationException("Not supported yet.");
    }
}
