package pt.ipp.isep.dei.ui;

public class CargoGenerationUI {
    // UI logic for cargo generation
}
